# validation-engine

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  QUICKSTART.md  README.md  SETUP.md  TESTING.md  TRANSFORMATION.md  example_rules.py  pyproject.toml  pytest.ini  run_tests.py  setup.sh  showcase_features.py  test_deep_copy_fix.py  test_enhancements.py  test_immutability_comprehensive.py
docs/: architecture.md  audit-and-replay.md  conceptual-model.md  configuration-guide.md  custom-rules.md  testing.md
examples/accounting/: ruleset.yaml  run_example.py
examples/securities/: ruleset.yaml  run_example.py
reference_data/: example_reference_data.json
tests/: conftest.py  test_config_loader.py  test_end_to_end.py  test_hashing.py  test_outcome_and_target.py  test_partitioned_strategy.py  test_paths.py  test_phase3_rules.py  test_phase4_applicability_deps.py  test_phase5_snapshots_plan_manifest.py  test_phase6_testing_helpers.py  test_production_fixes.py  test_ruleset_compiler.py  test_serialization.py  test_standard_rules.py  test_utils.py  test_validation_request.py  test_validation_result.py
validation_engine/: __init__.py
validation_engine/config/: __init__.py  compiler.py  factory.py  loader.py  schema.py
validation_engine/contracts/: __init__.py  actions.py  enums.py  findings.py  results.py
validation_engine/core/: __init__.py  _executor.py  context.py  contract_rules.py  engine.py  hashing.py  paths.py  serialization.py
validation_engine/engine/: __init__.py  cache.py  context.py  engine.py  evaluator.py  hooks.py  registry.py  safe_execution.py  (+1 more)
(+58 files in other folders)
