[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "validation-engine"
version = "2.0.0"
description = "Generic, configurable data-quality validation framework"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4", "pyyaml>=6.0"]
yaml = ["pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["validation_engine*"]
